--- a/package.json
+++ b/package.json
@@ -10,25 +10,30 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.4.2",
-    "framer-motion": "^10.16.4",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "framer-motion": "^12.23.26",
     "i18next": "^23.6.0",
     "negotiator": "^0.6.3",
-    "next": "14.0.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "react-parallax-tilt": "^1.7.172",
-    "tailwind-merge": "^2.0.0"
+    "next": "^16.0.8",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.315",
+    "tailwind-merge": "^2.0.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^16.0.8",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/negotiator": "^0.6.4",
+    "@types/three": "^0.182.0"
   }
 }
